# crowd-recital

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  server.Dockerfile
server/: admin_client.py  alembic.ini  application.py  configuration.py  containers.py  endpoints.py  errors.py  pre_download.py  pyproject.toml  requirements.dev  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 33ebc0607ac1_add_session_disavow_flag.py  3e89168f53b0_add_document_lang.py  5c3cc046f421_initial_db_schema.py  6b1c4c8aa754_add_session_duration_column.py  70c680311d9b_add_discarded_flag_to_session_text_.py  721be705653a_initial_db_schema.py  7bd13bfcf8f1_add_source_audio_filename_col.py  85bb1748266d_add_disavow_index.py  adffa455220c_initial_db.py  b4257de1d215_add_document_public_flag.py  bebd8dc37433_add_light_audio_filename_col.py  e53628a150e6_add_user_agreement_cols.py  e8846b934f3a_initial_db.py  fc28f83520f5_user_metadata_table.py
server/engines/: aggregation_engine.py  extraction_engine.py  nlp_pipeline.py  transform_engine.py
server/managers/: document_manager.py  recital_manager.py
server/models/: __init__.py  common.py  database.py  document.py  recital_audio_segment.py  recital_session.py  recital_text_segment.py  text_document.py  user.py  user_metadata.py
server/models/mixins/: date_fields.py
server/resource_access/: documents_ra.py  recitals_content_ra.py  recitals_ra.py  stats_ra.py  users_ra.py
server/routers/: admin.py  api.py  documents.py  sessions.py  stats.py  types.py  users.py  web_client.py
server/utility/: scheduler.py
(+151 files in other folders)
